--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>jurnlee.github.com by jurnlee</title>
+    <title>jurnlee&#39;s Blog by jurnlee</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>jurnlee.github.com</h1>
+        <h1>jurnlee&#39;s Blog</h1>
         <h2></h2>
         <a href="https://github.com/jurnlee" class="button"><small>Follow me on</small> GitHub</a>
       </div>
