--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 首页
+title: {{ site.locals.home }}
 ---
 <div class="row">
   {% for post in paginator.posts %}
@@ -11,10 +11,19 @@ title: 首页
         </div>
         <div class="panel-body">
           {{ post.description }} 
-          <br><small><a href="{{ site.url }}{{ post.url }}">继续阅读 <i class="icon-arrow-right"></i></a></small>
+          <br>
+          <small><a href="{{ site.url }}{{ post.url }}"> {{ site.constants.detail }} 
+          <i class="icon-arrow-right"></i></a></small>
         </div>
         <div class="panel-footer">
-          由作者 <a href="/pages/about.html">{{ site.author.name }}</a> 发布于 <a href='/pages/archive.html#{{ post.date | date:"%Y-%m"}}'>{{ post.date | date:"%Y年%m月%d日" }}</a> 分类: {% for category in post.category %} <a href="/pages/categories.html#{{ category }}">{{ category }}</a> {% endfor %}  标签: {% for tag in post.tags %} <a href="/pages/tags.html#{{ tag }}">#{{ tag }}#</a> {% endfor %}
+          	<a href="/pages/about.html">{{site.author.name }}</a> 
+          	{{ site.constants.postat }} 
+          	<a href='/pages/archive.html#{{ post.date | date:"%Y-%m"}}'>{{ post.date | date:"%Y-%m-%d" }}</a> 
+          	{{ site.locals.category }}: 
+          	{% for category in post.category %} 
+          		<a href="/pages/categories.html#{{ category }}">{{ category }}</a> {% endfor %}  
+          	{{ site.locals.tags }}: 
+          		{% for tag in post.tags %} <a href="/pages/tags.html#{{ tag }}">#{{ tag }}#</a>{% endfor %}
         </div>
       </div>
     </div>
