--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: {{ site.locals.home }}
+title: {{{ site.locals.home }}}
 ---
 <div class="row">
   {% for post in paginator.posts %}
