--- a/Constants.html
+++ b/Constants.html
@@ -25,4 +25,18 @@ title: 首页
   --{{site.constants.language}}		<br>
   
 </div>
+<hr />
+<ul>
+	<li>每个页面中头部定义的title不能使用变量
+	<pre>
+		---
+		layout: page
+		title: {{site.title}}
+		---
+	</pre> 
+	</li>
+	<li>
+		
+	</li>
+</ul>
 
