--- a/Constants.html
+++ b/Constants.html
@@ -24,6 +24,10 @@ title: 首页
   --{{site.url}} ---- {{site.links.aboutlink}} 		<br>
   --{{site.constants.language}}		<br>
   
+  <hr>
+  {{site.links}} 
+  {% if site.links %} <b>site.links is ok</b> {% endif %}
+  
 </div>
 <hr />
 <ul>
