--- a/Constants.html
+++ b/Constants.html
@@ -25,8 +25,8 @@ title: 首页
   --{{site.constants.language}}		<br>
   
   <hr>
-  {{site.links}} 
-  {% if site.links %} <b>site.links is ok</b> {% endif %}
+  {{site.author}} 
+  {% if site.links %} <b>site.author is ok</b> {% endif %}
   
 </div>
 <hr />
