--- a/Constants.html
+++ b/Constants.html
@@ -25,7 +25,7 @@ title: 首页
   --{{site.constants.language}}		<br>
   
   <hr>
-  {{site.author}} 
+  {{site.test1}} 
   {% if site.test1 %} <b>site.test1 is ok</b> {% endif %}
   
 </div>
