--- a/Constants.html
+++ b/Constants.html
@@ -26,7 +26,7 @@ title: 首页
   
   <hr>
   {{site.test1}} 
-  {% if site.test1 %} <b>site.test1 is ok</b> {% endif %}
+  {% if site.test1.test11 %} <b>site.test1 is ok</b> {% endif %}
   
 </div>
 <hr />
