--- a/Constants.html
+++ b/Constants.html
@@ -25,9 +25,9 @@ title: 首页
   --{{site.constants.language}}		<br>
   
   <hr>
-  {{site.test1}} 
-  {% if site.test1.test11 %} <b>site.test1 is ok</b> {% endif %}
-  
+  {{site.test1}}  <br>
+  {% if site.test1.test11 %} <b>site.test1 is ok</b> {% endif %}    <br>
+  {{site.test2}} 
 </div>
 <hr />
 <ul>
