--- a/pages/about.html
+++ b/pages/about.html
@@ -4,37 +4,43 @@ title: 关于
 ---
 
 <style type="text/css">
-	p{
-		font-size:14px;
-		color: #333;
-		font: "微软雅黑";
-	}
+body,h1,h2,h3,h4{
+	font-family:"微软雅黑";
+}
+p{
+	font-size:14px;
+	color: #333;
+	text-indent:2em;
+	/*font-family: "微软雅黑";*/
+}
 	
 </style>
 
-<h1>关于文章</h1>
+<blockquote> <h3>关于这个站点</h3> </blockquote>
 
 <p>
-	从中学时代便开始偶尔写点东西，到大学已经写满了两个笔记本，后来选择了计算机，便开始用电子文本记录生活和学习的点点滴滴，
+从中学时代便开始偶尔写点东西，到大学已经写满了两个笔记本，后来选择了计算机，便开始用电子文本记录生活和学习的点点滴滴，
 曾在空间，新浪/网易博客，Lofter，CSDN，51CTO等各类平台尝试了多次，但更新很随心，记录几篇就忘记了，这众多平台烦乱不易
 于管理也不都符合个人的记录习惯，所以最终还是决定做一个独立空间。
 </p>
 <p>
-	我并不擅长写文章，只是比较健忘，好记性不如烂笔头，最好的办法就是写下来，所以这里的文章会有各种各样的分类，我畅所
+我并不擅长写文章，只是比较健忘，好记性不如烂笔头，最好的办法就是写下来，所以这里的文章会有各种各样的分类，我畅所
 欲言的东西，不求有人阅读与评论，只要自己多年后看到依然能想起，当时自己的想法是多有趣，幼稚也好，熟虑也罢，那终归是我成
 长的印迹。
 <p>
-	曾以为我的爱好广泛，但慢慢的才发觉，自己喜欢的，能干得了的也就那几样，涉及到的行业也不超过那一两个。
+曾以为我的爱好广泛，但慢慢的才发觉，自己喜欢的，能干得了的也就那几样，涉及到的行业也不超过那一两个。
 </p>
-	<p>影视，科技，梦想，旅行，音乐，人生，将都有小谈，但涉世未深的我也只是在单纯的描述自己的初想。</p>
+<p>影视，科技，梦想，旅行，音乐，人生，将都有小谈，但涉世未深的我也只是在单纯的描述自己的初想。</p>
 
-<h1>关于我</h1>
+<blockquote> <h3>关于我</h3> </blockquote>
 <p>
-    一个追求心内完美，向往真知的平凡普通人类，就如同一只在路上奔跑的蜗牛，无论脚步再慢，但远方的心，始终在召唤，既然活着就要
+    一个追求完美，向往真知的平凡普通成长型人类，就如同一只在路上奔跑的蜗牛，无论脚步再慢，但远方的心，始终在召唤，既然活着就要
 活得有点意义，不要白来这世间走一遭，掉入历史长河无限循环的旋窝中。
 </p>
  
-<address>
-  <strong>Email</strong><br>
-  <a href="mailto:jurnlee@sina.com">jurnlee@sina.com</a>
-</address>
+	<br>
+	<br>
+  <strong>Email</strong>
+  <br>
+  	<p> <a href="mailto:jurnlee@sina.com">jurnlee@sina.com</a> </p>
+  
