--- a/template.html
+++ b/template.html
@@ -235,7 +235,7 @@
 			#navButton .toggle {
 				text-decoration: none;
 				height: 100%;
-				right: 0;
+				left: 0;
 				position: absolute;
 				top: 0;
 				width: 100%;
@@ -250,14 +250,14 @@
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
-				background: rgba(192, 192, 192, 0.75);
+				background: rgba(109, 109, 109, 0.75);
 				border-radius: 5px;
 				color: #fff;
 				content: '\f0c9';
 				display: block;
 				font-size: 16px;
 				height: 2.25em;
-				right: 0.5em;
+				left: 0.5em;
 				line-height: 2.25em;
 				position: absolute;
 				text-align: center;
