--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
 		<style type="text/css">
-		#page-wrapper {
+			#page-wrapper {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
@@ -34,6 +34,53 @@
 				padding-bottom: 1px;
 			}
 			/* header nav */
+			
+			#header.reveal {
+				-moz-animation: reveal-header 0.5s;
+				-webkit-animation: reveal-header 0.5s;
+				-ms-animation: reveal-header 0.5s;
+				animation: reveal-header 0.5s;
+			}
+			
+			#header.alt {
+				-moz-animation: none;
+				-webkit-animation: none;
+				-ms-animation: none;
+				animation: none;
+				background: none;
+				color: rgba(255, 255, 255, 0.75);
+				position: relative;
+			}
+			
+			#header.alt nav > ul > li a:not(.button).icon:before {
+				color: rgba(255, 255, 255, 0.75);
+			}
+			
+			#header.alt nav > ul > li.active a:not(.button) {
+				background-color: rgba(255, 255, 255, 0.2);
+			}
+			
+			#header.alt input[type="submit"],
+			#header.alt input[type="reset"],
+			#header.alt input[type="button"],
+			#header.alt .button {
+				box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5);
+			}
+			
+			#header.alt input[type="submit"]:hover,
+			#header.alt input[type="reset"]:hover,
+			#header.alt input[type="button"]:hover,
+			#header.alt .button:hover {
+				background-color: rgba(255, 255, 255, 0.1);
+			}
+			
+			#header.alt input[type="submit"]:active,
+			#header.alt input[type="reset"]:active,
+			#header.alt input[type="button"]:active,
+			#header.alt .button:active {
+				background-color: rgba(255, 255, 255, 0.2);
+			}
+			
 			#nav {
 				position: absolute;
 				left: 0;
@@ -75,6 +122,7 @@
 				position: relative;
 				float: left;
 			}
+			
 			#nav-list .nav-item a {
 				margin: 0 0.5rem;
 				padding: 0 0.5rem;
@@ -88,12 +136,12 @@
 				color: #6ce;
 			}
 			
-			#nav-list .nav-item:hover ul{
+			#nav-list .nav-item:hover ul {
 				display: block;
-				transform: rotate(6deg) ;
-				-moz-transform: rotate(6deg) ;
-				-ms-transform: rotate(6deg) ;
-				-webkit-transform: rotate(6deg) ;
+				transform: rotate(6deg);
+				-moz-transform: rotate(6deg);
+				-ms-transform: rotate(6deg);
+				-webkit-transform: rotate(6deg);
 			}
 			
 			#nav-list .nav-item ul {
@@ -148,6 +196,7 @@
 			/* jQuery.dropotron
 			 * https://github.com/n33/jquery.dropotron 
 			 */
+			
 			.dropotron {
 				background: #fff;
 				border-radius: 6px;
@@ -157,9 +206,11 @@
 				padding: 0.5rem 0;
 				width: 8rem;
 			}
+			
 			.dropotron li {
 				padding: 0;
 			}
+			
 			.dropotron li a,
 			.dropotron li span {
 				-moz-transition: none;
@@ -173,10 +224,12 @@
 				padding: 0.35rem 1rem;
 				font-family: inherit;
 			}
+			
 			.dropotron li:first-child > a,
 			.dropotron li:first-child > span {
 				border-top: 0;
 			}
+			
 			.dropotron li.active > a,
 			.dropotron li.active > span,
 			.dropotron li:hover > a,
@@ -184,10 +237,12 @@
 				background: #e89980;
 				color: #ffffff;
 			}
+			
 			.dropotron.level-0 {
 				font-size: 1rem;
 				margin: 1rem 0 0 0;
 			}
+			
 			.dropotron.level-0:before {
 				-moz-transform: rotate(45deg);
 				-webkit-transform: rotate(45deg);
@@ -208,6 +263,7 @@
 				z-index: 0;
 			}
 			/* nav button */
+			
 			#navButton {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
@@ -224,38 +280,41 @@
 				width: 100%;
 				z-index: 10001;
 			}
-				#navButton .toggle {
-					text-decoration: none;
-					height: 100%;
-					right: 0;
-					position: absolute;
-					top: 0;
-					width: 100%;
-					border: 0;
-					outline: 0;
-				}
-					#navButton .toggle:before {
-						-moz-osx-font-smoothing: grayscale;
-						-webkit-font-smoothing: antialiased;
-						font-family: FontAwesome;
-						font-style: normal;
-						font-weight: normal;
-						text-transform: none !important;
-						background: rgba(192, 192, 192, 0.75);
-						border-radius: 5px;
-						color: #fff;
-						content: '\f0c9';
-						display: block;
-						font-size: 16px;
-						height: 2.25em;
-						right: 0.5em;
-						line-height: 2.25em;
-						position: absolute;
-						text-align: center;
-						top: 0.5em;
-						width: 3.5em;
-					}
+			
+			#navButton .toggle {
+				text-decoration: none;
+				height: 100%;
+				right: 0;
+				position: absolute;
+				top: 0;
+				width: 100%;
+				border: 0;
+				outline: 0;
+			}
+			
+			#navButton .toggle:before {
+				-moz-osx-font-smoothing: grayscale;
+				-webkit-font-smoothing: antialiased;
+				font-family: FontAwesome;
+				font-style: normal;
+				font-weight: normal;
+				text-transform: none !important;
+				background: rgba(192, 192, 192, 0.75);
+				border-radius: 5px;
+				color: #fff;
+				content: '\f0c9';
+				display: block;
+				font-size: 16px;
+				height: 2.25em;
+				right: 0.5em;
+				line-height: 2.25em;
+				position: absolute;
+				text-align: center;
+				top: 0.5em;
+				width: 3.5em;
+			}
 			/* nav pannel */
+			
 			#navPanel {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
@@ -280,48 +339,55 @@
 				background: #2b2b2b;
 				color: #bbb;
 			}
-				#navPanel .link {
-					border-bottom: 0;
-					border-top: solid 1px rgba(255, 255, 255, 0.05);
-					color: #bbb;
-					display: block;
-					height: 44px;
-					line-height: 44px;
-					padding: 0 1em 0 1em;
-					text-decoration: none;
-				}
-					#navPanel .link:first-child {
-						border-top: 0;
-					}
-					#navPanel .link.depth-0 {
-						color: #fff;
-					}
-					#navPanel .link .indent-1 {
-						display: inline-block;
-						width: 1em;
-					}
-					body.navPanel-visible #page-wrapper {
-						-moz-transform: translateX(275px);
-						-webkit-transform: translateX(275px);
-						-ms-transform: translateX(275px);
-						transform: translateX(275px);
-					}
-					body.navPanel-visible #navButton {
-						-moz-transform: translateX(275px);
-						-webkit-transform: translateX(275px);
-						-ms-transform: translateX(275px);
-						transform: translateX(275px);
-					}
-					body.navPanel-visible #navPanel {
-						-moz-transform: translateX(0);
-						-webkit-transform: translateX(0);
-						-ms-transform: translateX(0);
-						transform: translateX(0);
-					}
 			
+			#navPanel .link {
+				border-bottom: 0;
+				border-top: solid 1px rgba(255, 255, 255, 0.05);
+				color: #bbb;
+				display: block;
+				height: 44px;
+				line-height: 44px;
+				padding: 0 1em 0 1em;
+				text-decoration: none;
+			}
+			
+			#navPanel .link:first-child {
+				border-top: 0;
+			}
+			
+			#navPanel .link.depth-0 {
+				color: #fff;
+			}
+			
+			#navPanel .link .indent-1 {
+				display: inline-block;
+				width: 1em;
+			}
+			
+			body.navPanel-visible #page-wrapper {
+				-moz-transform: translateX(275px);
+				-webkit-transform: translateX(275px);
+				-ms-transform: translateX(275px);
+				transform: translateX(275px);
+			}
+			
+			body.navPanel-visible #navButton {
+				-moz-transform: translateX(275px);
+				-webkit-transform: translateX(275px);
+				-ms-transform: translateX(275px);
+				transform: translateX(275px);
+			}
+			
+			body.navPanel-visible #navPanel {
+				-moz-transform: translateX(0);
+				-webkit-transform: translateX(0);
+				-ms-transform: translateX(0);
+				transform: translateX(0);
+			}
 			/*小屏手机*/
-			@media screen and (max-width: 640px) {
-				#header{
+			
+			@media screen and (max-width: 720px) {
+				#header {
 					display: none;
 				}
 				#hd-banner {
@@ -329,8 +395,9 @@
 				}
 			}
 			/*平板横屏与笔记本全屏*/
-			@media screen and (min-width: 640px) and (max-width:1366px) {
-				#navButton{
+			
+			@media screen and (min-width: 720px) and (max-width:1366px) {
+				#navButton {
 					display: none;
 				}
 				#hd-banner {
@@ -340,7 +407,7 @@
 			/*电脑显示器全屏*/
 			
 			@media screen and (min-width: 1366px) {
-				#navButton{
+				#navButton {
 					display: none;
 				}
 				#hd-banner {
@@ -353,7 +420,7 @@
 	<body>
 		<div id="page-wrapper">
 			<!-- header -->
-			<header id="header">
+			<header id="header" class="alt">
 				<!-- nav -->
 				<nav id="nav">
 					<div class="nav-wraper">
@@ -426,7 +493,7 @@
 					var $window = $(window),
 						$body = $('body'),
 						$header = $('#header'),
-						$banner = $('#banner');
+						$banner = $('#hd-banner');
 					// Dropdowns.
 					$('#nav-list  ul').dropotron({
 						alignment: 'left'
@@ -455,6 +522,22 @@
 							target: $body,
 							visibleClass: 'navPanel-visible'
 						});
+						console.log(skel.vars.mobile )
+					if (!skel.vars.mobile && $header.hasClass('alt') && $banner.length > 0) {
+						$window.on('load', function() {
+							$banner.scrollwatch({
+								delay: 0,
+								range: 0.5,
+								anchor: 'top',
+								on: function() {
+									$header.addClass('alt reveal');
+								},
+								off: function() {
+									$header.removeClass('alt');
+								}
+							});
+						});
+					}
 				});
 			})(jQuery);
 		</script>
