--- a/template.html
+++ b/template.html
@@ -493,6 +493,7 @@
 					<p>人生很诡异。假如所有希望都失去，陷入绝境，反倒更有力量了。有些勇气，承认自己一无所有的时候才能获得。
 						意识到自己连命运都无法依赖，不相信有美好的事情在等着自己，人才会把每一步都当最后一步来走，踏踏实实地寻找每一丝变好的可能。
 					</p>
+					<p>我喜欢逆向</p>
 				</div>
 			</div>
 
