--- a/template.html
+++ b/template.html
@@ -446,11 +446,15 @@
 			#hd-banner {
 				position: relative;
 				//margin-top: 4rem;
-				background-position: center;
+				/*background-position: center;
 				background-image: url('public/img/hbg01.jpg');
 				background-color: #666;
 				background-size: cover;
-				background-attachment: scroll, fixed;
+				background-attachment: scroll, fixed;*/
+				background: url('public/img/hbg01.jpg'),url('public/img/bg200150.jpg') ;
+				background-position: center center,top left;
+				background-repeat: no-repeat,repeat;
+				background-size: cover,auto;
 				text-align: center;
 				color: white;
 				height: 100%;
