--- a/template.html
+++ b/template.html
@@ -453,8 +453,8 @@
 				background-attachment: scroll, fixed;*/
 				background: url('public/img/hbg01.jpg'),url('public/img/bg200150.jpg') ;
 				background-position: center center,top left;
-				background-repeat: no-repeat,repeat;
-				background-size: cover,auto;
+				background-repeat: no-repeat,no-repeat;
+				background-size: cover,cover;
 				text-align: center;
 				color: white;
 				height: 100%;
