--- a/template.html
+++ b/template.html
@@ -463,14 +463,12 @@
 			
 			.hd-txt {
 				text-align: center;
+				font-family: "微软雅黑";
 				width: 70%;
+				min-width: 385px;
 				margin: 0 auto;
 				padding-top: 20%;
 				transform: scale(0.9) ;
-				backface-visibility: hidden;
-				-moz-backface-visibility: hidden;
-				-ms-backface-visibility: hidden;
-				-webkit-backface-visibility: hidden;
 			}
 			.scalefloat{
 				transform: scale(1) ;
@@ -479,6 +477,20 @@
 				transition: transform 10s ease-in-out;
 				-moz-transition: transform 10s ease-in-out;;
 				-ms-transition: transform 10s ease-in-out;;
+			}
+			.hd-txt,.scalefloat{
+				backface-visibility: hidden;
+				-moz-backface-visibility: hidden;
+				-ms-backface-visibility: hidden;
+				-webkit-backface-visibility: hidden;
+			}
+			.hd-txt h1{
+				margin-bottom: 2rem;
+				line-height: 2.5rem;
+			}
+			.hd-txt p{
+				line-height: 1.4rem;
+				margin-bottom: 1rem;
 			}
 			
 			/* main container */
@@ -510,17 +522,17 @@
 			
 			/*小屏手机*/
 			
-			@media screen and (max-width: 720px) {
+			@media screen and (max-width: 700px) {
 				#header {
 					display: none;
 				}
 				#hd-banner {
-					height: 400px;
+					height: 450px;
 				}
 			}
 			/*平板横屏与笔记本全屏*/
 			
-			@media screen and (min-width: 720px) and (max-width:1366px) {
+			@media screen and (min-width: 700px) and (max-width:1366px) {
 				#navButton {
 					display: none;
 				}
@@ -574,11 +586,12 @@
 			<!-- banner -->
 			<div id="hd-banner">
 				<div class="hd-txt">
-					<h1>当你不断追求卓越的时候，成功一定会追赶你的脚步。</h1>
-					<p>人生很诡异。假如所有希望都失去，陷入绝境，反倒更有力量了。有些勇气，承认自己一无所有的时候才能获得。
+					<h1>当你不断追求卓越的时候，成功一定会追赶你的脚步</h1>
+					<p>人生很诡异。假如所有希望都失去，陷入绝境，反倒更有力量。
+						有些勇气，承认自己一无所有的时候才能获得。
 						意识到自己连命运都无法依赖，不相信有美好的事情在等着自己，人才会把每一步都当最后一步来走，踏踏实实地寻找每一丝变好的可能。
 					</p>
-					<p>我喜欢逆向</p>
+					<p>等你成功以后再来告诉别人过程的艰辛，也许没有这样一边走一遍探索出的东西更真切，更具有普遍意义，所以我将从现在开始记录在这世上的悲愤故事，快乐故事。</p>
 				</div>
 			</div>
 
